# job-search-phobert

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  app.py  elastic.py  infer.py  pyproject.toml  train.py  utils.py
backend/data/: data.csv  preprocess.py
frontend/: Dockerfile
frontend/webapp/: package-lock.json  package.json
scrape/: pyproject.toml
scrape/jobscrape/: scrapy.cfg
scrape/jobscrape/jobscrape/: items.py  middlewares.py  pipelines.py  settings.py
scrape/jobscrape/jobscrape/spiders/: topcv.py
