[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["nguyennguyentruong <nguyenntk.18@grad.uit.edu.vn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
pandas = "^2.2.3"
torch = "^2.4.1"
transformers = {extras = ["torch"], version = "^4.45.1"}
datasets = "^3.0.1"
numpy = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
