[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["nguyen"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
torch = "^2.4.1"
transformers = {extras = ["torch"], version = "^4.45.1"}
datasets = "^3.0.1"
flask = "^3.0.3"
scikit-learn = "^1.5.2"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
