[tool.poetry]
name = "scrape"
version = "0.1.0"
description = ""
authors = ["nguyennguyentruong <nguyenntk.18@grad.uit.edu.vn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
